refactor: security cleanup - externalize JWT config, add Slf4j logging, move SecurityConfig to config package